# document-rag

./: .coveragerc  .gitignore  README.md  chatbot.py  pyproject.toml
.github/disabled-workflows/: publish.yaml
.github/workflows/: test.yaml
document_rag/: __init__.py  api.py  qdrant.py  rag.py  settings.py  types.py
document_rag/llm/: __init__.py  base.py  huggingface.py  openai.py
document_rag/ranker/: __init__.py  base.py  huggingface.py
document_rag/vector_db/: __init__.py  base.py  qdrant.py
tests/: test_llm.py  test_nothing.py  test_rag.py  test_ranker.py
